--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "angular": "~1.2.24",
     "bootstrap": "~3.2.0",
-    "angular-ui-codemirror": "~0.1.6"
+    "angular-ui-codemirror": "~0.1.6",
+    "lodash": "~2.4.1"
   }
 }
